testfiles/advanced_tests/SemanticErrors/incompatibleTypes1SymbolTable.dot
digraph AST {
  "128497226327152" [label=""];
  "128497226327152" -> "128497226330896";
  "128497226330896" [label="main: INT
x: INT"];
}
